# ftp-mitm

./: CMakeLists.txt  README.md  config.yml  settings.yml  traffic_example.pcapng
src/: CMakeLists.txt  main
src/client/: main.cpp
src/ftp-mitm/: ftp-mitm.cpp  ftp-session.cpp
src/ftp-mitm/includes/: ftp-mitm.hpp  ftp-session.hpp  task.hpp
src/ftp_mitm/: ftp_mitm.cpp  ftp_session.cpp
src/ftp_mitm/includes/: ftp_mitm.hpp  ftp_session.hpp  task.hpp
